<?xml version="1.0" encoding="UTF-8"?>
<resources>
  <string name="app_name">Showcase</string>
  <string name="category">Categorias</string>
  <string name="offile">Sin conexión a internet</string>
  <string name="login.fb">Conectar con Facebook</string>
  <string name="ingresar">Ingresar</string>
  <string name="registrarse">Registrarse</string>
  <string name="eslogan">Encuentra lo que quieres comprar en un solo lugar</string>
  <string name="Ingresar">Ingresar</string>
  <string name="no_tienes_cuenta">¿Aún no tienes cuenta? Regístrate aquí</string>
  <string name="correo">Correo electrónico</string>
  <string name="password">Contraseña</string>
  <string name="nombre">Nombre</string>
  <string name="apellido">Apellido</string>
  <string name="registro">Registrarme</string>
  <string name="no_tienes_cuenta_registro">¿Estás registrado? Ingresa aquí</string>
  <string name="encuentra">ENCUENTRA</string>
  <string name="lo_que_quieres_comprar">LO QUE QUIERES COMPRAR\nEN UN SÓLO LUGAR</string>
  <string name="facebook_app_id" translatable="false">1545741209066315</string>
  <string name="Enviar">Enviar</string>
  <string name="recuperar_password">¿No recuerdas tu\ncontraseña?</string>
  <string name="recuperar_password2">¿No recuerdas tu contraseña?</string>
  <string name="escribe_tu_correo">Escríbe tu correo electrónico y te harémos\nllegar la forma para
    recuperarla.
  </string>
  <string name="acept">Aceptar</string>
  <string name="cancel">Cancelar</string>
  <string name="err_email">Email invalido</string>
  <string name="err_pass">Password incorrecto</string>
  <string name="loading">Cargando…</string>
  <string name="internet_err">Ha ocurrido un problema con tu conexion</string>
  <string name="general_err">Ha ocurrido un problema</string>
  <string name="perfil">Mi perfil</string>
  <string name="Guardar">Guardar</string>
  <string name="telefono_contacto">Teléfono de contacto</string>
  <string name="user_canceled">debes seleccionar una imagen</string>
  <string name="check_email">Revisa tu correo electronico para mirar las instrucciones</string>
  <string name="name_err">nombre incorrecto</string>
  <string name="lastName_err">apellido invalido</string>
  <string name="Almacenes_de_ropa">Almacenes de ropa</string>
  <string name="Ver_todos">Ver todos</string>
  <string name="action_sub_menu">Menu</string>
  <string name="search">Buscar</string>
  <string name="action_payment">Carrito de compras</string>
  <string name="open">Abrir</string>
  <string name="salir">Deseas salir</string>
  <string name="offer">Este establecimiento ofrece</string>
  <string name="puntuacion_ok">gracias por calificarnos</string>
  <string name="reservar">Reservar</string>
  <string name="item_count_err">Debes seleccionar al menos un elemento</string>
  <string name="max_item">Cantidad maxima de productos</string>
  <string name="resultados_para">Resultados para</string>
  <string name="direeciones_envio">Direcciones de envío</string>
  <string name="agregar_direccion">Agregar dirección</string>
  <string name="descriptiongeneral">descripcion</string>
  <string name="nueva_direccion">Nueva dirección</string>
  <string name="ingresar_direccion">Ingresa tu dirección</string>
  <string name="informacion_adicional">Información adicional</string>
  <string name="barrio">Barrio</string>
  <string name="ciudad">Ciudad</string>
  <string name="nombre_direccion">Nombre para esta dirección</string>
  <string name="datos_invalidos">Los datos ingresados son inválidos</string>
  <string name="reserva_ok">Tu pedido %1$s ha sido reservado!, continua con tu carrito de compras
  </string>
  <string name="desc_pedidos">Estos son los artículos de tu pedido</string>
  <string name="siguiente">Siguiente</string>
  <string name="subtotal">Subtotal</string>
  <string name="domicilio">Domicilio</string>
  <string name="valor_total">Valor total</string>
  <string name="no_tienes_elementos">no tienes elementos en tu carrito de compras</string>
  <string name="cancelar_pedido">- Cancelar pedido -</string>
  <string name="seguro_cancelar">Seguro que deseas cancelar?</string>
  <string name="direccion_entraga">Dirección de entrega</string>
  <string name="forma_pago">Forma de pago</string>
  <string name="cupon_descuento">Cupón de descuento</string>
  <string name="agregue_cupon">Agregué un cupón</string>
  <string name="seleccione">Seleccione</string>
  <string name="datos_comple_pedido">Ingresa los datos para entregar tu pedido</string>
  <string name="seguro_eliminar_producto">Seguro que deseas eliminar este elemento?</string>
  <string name="redimir_cupon">Redimir código</string>
  <string name="agrega_cupon">Agrega un cupón</string>
  <string name="ingresa_codigo_promo">Ingresa un código promocional</string>
  <string name="cupon_invalido">Código promocional inválido</string>
  <string name="regresar_inicio">Regresar al inicio</string>
  <string name="pedido_recivido">Hemos recibido tu pedido</string>
  <string name="desc_pedido_ok">En este momento nuestro personal organizará tu pedido y los
    recibirás en la dirección suministrada
  </string>
  <string name="pedido_enviado">Pedido enviado</string>
  <string name="pedidos_proceso">Pedidos en proceso</string>
  <string name="estado_color">Estado:</string>
  <string name="pedido_contaodr">Pedido #%1$s</string>
  <string name="pedido_fecha">Realizado el %1$s</string>
  <string name="historial_pedidos">Historial de pedidos</string>
  <string name="datos_pedido">Datos del pedido #%1$s</string>
  <string name="compartir">Selecciona cómo quieres compartir</string>
  <string name="compartir_cont">%1$s, encuntralo en https://showcase.com.co/</string>
  <string name="terminos_condiciones">Términos y condiciones</string>
  <string name="url">https://showcase.com.co/</string>
  <string name="url_share">http://bit.ly/2h0i6Pc</string>
  <string name="intenar_de_nuevo">Ha ocurrido un error, desea intentar de nuevo?</string>
  <string name="err_datos_zona">No hay establecimientos en esta zona</string>
  <string-array name="formas_pago">
    <item>efectivo</item>
    <item>tarjeta</item>
  </string-array>
  <string name="compartir_establecimiento">Encuentra %1$s en Showcase App. Más información de nuestros afiliados en %2$s</string>
  <string name="compartir_articulo">Encuentra %1$s en %2$s. Más información de nuestros afiliados en %3$s</string>
  <string name="msg_sitio_web">Sitio web Showcase</string>
</resources>

