<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kelly_green"
    >
  <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="@dimen/_173sdp"
      android:layout_alignParentBottom="true"
      android:layout_alignParentStart="true"
      android:background="@drawable/rana_registro"
      />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_237sdp"
        android:layout_marginLeft="@dimen/_18sdp"
        android:layout_marginRight="@dimen/_18sdp"
        >
      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="@dimen/_237sdp"
          android:layout_marginLeft="@dimen/_5sdp"
          android:layout_marginRight="@dimen/_5sdp"
          style="@style/card_singin_small"
          />
      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="@dimen/_230sdp"
          style="@style/card_singin"

          >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            >
          <android.support.design.widget.TextInputLayout
              android:id="@+id/nombreWrapper"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/_16sdp"
              android:layout_marginRight="@dimen/_16sdp"
              android:hint="@string/nombre"
              >
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ico_nombreusuario"
                android:drawablePadding="@dimen/_8sdp"
                android:inputType="text"
                style="@style/edt_singin"
                />
          </android.support.design.widget.TextInputLayout>
          <android.support.design.widget.TextInputLayout
              android:id="@+id/apellidoWrapper"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/_16sdp"
              android:layout_marginRight="@dimen/_16sdp"
              android:hint="@string/apellido"
              >
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ico_apellidousuario"
                android:drawablePadding="@dimen/_8sdp"
                android:inputType="text"
                style="@style/edt_singin"
                />
          </android.support.design.widget.TextInputLayout>
          <android.support.design.widget.TextInputLayout
              android:id="@+id/passwordWrapper"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/_16sdp"
              android:layout_marginRight="@dimen/_16sdp"
              android:hint="@string/password"
              >
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ico_contrasena"
                android:drawablePadding="@dimen/_8sdp"
                android:inputType="textPassword"
                style="@style/edt_singin"
                />
          </android.support.design.widget.TextInputLayout>
          <android.support.design.widget.TextInputLayout
              android:id="@+id/emailWrapper"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/_16sdp"
              android:layout_marginRight="@dimen/_16sdp"
              android:hint="@string/correo"
              >
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ico_correo"
                android:drawablePadding="@dimen/_8sdp"
                android:inputType="textEmailAddress"
                style="@style/edt_singin"
                />
          </android.support.design.widget.TextInputLayout>
        </LinearLayout>

      </android.support.v7.widget.CardView>
    </RelativeLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_ingresar"
        android:layout_width="@dimen/_158sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/btn_naranja_selector"
        android:text="@string/registro"
        style="@style/txt_white_style"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_no_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_18sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_46sdp"
        android:text="@string/no_tienes_cuenta_registro"
        style="@style/txt_white_style"
        />
  </LinearLayout>
</RelativeLayout>
