<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kelly_green"
    android:orientation="vertical"
    >
  <android.support.v4.widget.NestedScrollView
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
      <android.support.v7.widget.Toolbar
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/kelly_green"
          android:fitsSystemWindows="true"
          android:minHeight="?attr/actionBarSize"
          app:navigationIcon="@drawable/btn_menu_principal"
          style="@style/MyToolbarStyle"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/_43sdp"
          android:layout_gravity="center"
          android:background="@color/orange"
          android:gravity="center"
          style="@style/elevation1dp"
          >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pedido_enviado"
            android:textSize="@dimen/_15sdp"
            style="@style/txt_white_style"
            />

      </LinearLayout>

      <android.support.v7.widget.CardView
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="@dimen/_202sdp"
          android:layout_marginEnd="@dimen/_13sdp"
          android:layout_marginStart="@dimen/_13sdp"
          style="@style/card_singin"
          >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"

            >
          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:background="@drawable/cara_feliz"
              />
          <android.support.v7.widget.AppCompatTextView

              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginLeft="@dimen/_5sdp"
              android:layout_marginRight="@dimen/_5sdp"
              android:layout_marginTop="@dimen/_6sdp"
              android:gravity="center"
              android:maxLines="1"
              android:text="@string/pedido_recivido"
              android:textSize="@dimen/_17sdp"
              style="@style/txt_outer_space"
              />
          <android.support.v7.widget.AppCompatTextView

              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginLeft="@dimen/_30sdp"
              android:layout_marginRight="@dimen/_30sdp"
              android:layout_marginTop="@dimen/_6sdp"
              android:gravity="center"
              android:maxLines="3"
              android:text="@string/desc_pedido_ok"
              android:textSize="@dimen/_11sdp"
              style="@style/txt_manatee"
              />

        </LinearLayout>

      </android.support.v7.widget.CardView>


      <android.support.v7.widget.AppCompatButton
          android:id="@+id/btn_siguiente"
          android:layout_width="wrap_content"
          android:layout_height="@dimen/_40sdp"
          android:layout_gravity="center"
          android:layout_marginTop="@dimen/_16sdp"
          android:background="@drawable/btn_naranja_selector"
          android:paddingLeft="@dimen/_36sdp"
          android:paddingRight="@dimen/_36sdp"
          android:text="@string/regresar_inicio"
          style="@style/txt_white_style"
          />

    </LinearLayout>
  </android.support.v4.widget.NestedScrollView>


</LinearLayout>