<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kelly_green"
    android:orientation="vertical"
    >
  <android.support.v4.widget.NestedScrollView
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
      <android.support.v7.widget.Toolbar
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:id="@+id/toolbar_perfil"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/kelly_green"
          android:fitsSystemWindows="true"
          android:minHeight="?attr/actionBarSize"
          app:navigationIcon="@drawable/btn_menu_principal"
          style="@style/MyToolbarStyle"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/_43sdp"
          android:layout_gravity="center"
          android:background="@color/orange"
          android:gravity="center"
          style="@style/elevation1dp"
          >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nueva_direccion"
            android:textSize="@dimen/_17sdp"
            style="@style/txt_white_style"
            />

      </LinearLayout>
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/_247sdp"
          android:layout_marginLeft="@dimen/_13sdp"
          android:layout_marginRight="@dimen/_13sdp"
          android:layout_marginTop="@dimen/_13sdp"
          >
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/card_singin"

            >

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:orientation="vertical"

              >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/nombreWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:hint="@string/nombre"
                android:textColorHint="@color/yellow_green"

                >
              <android.support.v7.widget.AppCompatEditText
                  android:id="@+id/edt_nombre"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:drawableLeft="@drawable/ico_nombreusuario"
                  android:drawablePadding="@dimen/_8sdp"
                  android:inputType="text"
                  android:textColor="@color/napier_green"
                  android:theme="@style/edt_singin"
                  />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/apellidoWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:hint="@string/apellido"
                android:textColorHint="@color/yellow_green"

                >
              <android.support.v7.widget.AppCompatEditText
                  android:id="@+id/edt_apellido"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:drawableLeft="@drawable/ico_apellidousuario"
                  android:drawablePadding="@dimen/_8sdp"
                  android:inputType="text"
                  android:textColor="@color/napier_green"
                  android:theme="@style/edt_singin"

                  />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:hint="@string/password"
                android:textColorHint="@color/yellow_green"

                >
              <android.support.v7.widget.AppCompatEditText
                  android:id="@+id/edt_password"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:drawableLeft="@drawable/ico_contrasena"
                  android:drawablePadding="@dimen/_8sdp"
                  android:inputType="textPassword"
                  android:textColor="@color/napier_green"
                  android:theme="@style/edt_singin"

                  />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:hint="@string/correo"
                android:textColorHint="@color/yellow_green"

                >
              <android.support.v7.widget.AppCompatEditText
                  android:id="@+id/edt_email"
                  android:layout_width="340dp"
                  android:layout_height="wrap_content"
                  android:drawableLeft="@drawable/ico_correo"
                  android:drawablePadding="@dimen/_8sdp"
                  android:inputType="textEmailAddress"
                  android:textColor="@color/napier_green"
                  android:theme="@style/edt_singin"

                  />
            </android.support.design.widget.TextInputLayout>
          </LinearLayout>

        </android.support.v7.widget.CardView>
      </RelativeLayout>
      <android.support.v7.widget.AppCompatButton
          android:id="@+id/btn_nueva_direccion"
          android:layout_width="wrap_content"
          android:layout_height="@dimen/_40sdp"
          android:layout_gravity="center"
          android:layout_marginTop="@dimen/_16sdp"
          android:background="@drawable/btn_naranja_selector"
          android:paddingLeft="@dimen/_36sdp"
          android:paddingRight="@dimen/_36sdp"
          android:text="@string/Guardar"
          style="@style/txt_white_style"
          />
    </LinearLayout>
  </android.support.v4.widget.NestedScrollView>


</LinearLayout>